added search logic

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import './vars.scss';
 @import './global.scss';
+@import '../features/flights/components/flightBoard/flight-board.scss';
 
 
 body {
